--- a/templates/common/comment_dialog.html
+++ b/templates/common/comment_dialog.html
@@ -20,8 +20,8 @@
                                     class="fr-input"
                                     aria-describedby="text-input-error-desc-error"
                                     type="text"
-                                    id="{{form_input_id}}_comment-textarea"
-                                    name="{{form_input_html}}_comment-textarea"
+                                    id="textarea_{{form_input_id}}_comment"
+                                    name="textarea_{{form_input_html}}_comment"
                                     rows="5"></textarea>
                                 <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
                                     <li>
