--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -141,10 +141,10 @@
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:cadastre' convention_uuid=convention.uuid editable=editable %}
+                        {% include "common/button/previous.html" with precedent='conventions:programme' convention_uuid=convention.uuid %}
                     {% else %}
-                        {% include "common/button/next.html" with suivant='conventions:edd' convention_uuid=convention.uuid %}
+                        {% include "common/button/noteditable_button.html" with convention=convention %}
                     {% endif %}
-                    {% include "common/button/previous.html" with precedent='conventions:programme' convention_uuid=convention.uuid %}
                 </div>
 
 
