--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -34,10 +34,10 @@
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid editable=editable %}
+                        {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
                     {% else %}
-                        {% include "common/button/next.html" with suivant='conventions:recapitulatif' convention_uuid=convention.uuid %}
+                        {% include "common/button/noteditable_button.html" with convention=convention %}
                     {% endif %}
-                    {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
                 </div>
             </form>
         </div>
