--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -126,12 +126,22 @@
                         {% else %}
                             {% include "common/button/next_and_save.html" with suivant='conventions:selection' %}
                         {% endif %}
+                        <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
+                            Revenir à la liste des conventions
+                        </a>
                     {% else %}
-                        {% include "common/button/next.html" with suivant='conventions:bailleur' convention_uuid=convention.uuid %}
+                        <div id="back_to_recap">
+                            <button type='button' class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" type="button" id="return_recap">
+                                Retour au Récapitulatif
+                            </button>
+                        </div>
+                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                            document.addEventListener('DOMContentLoaded', function () {
+                                document.getElementById('return_recap')
+                                    .addEventListener('click', function(){ location.href='{% url "conventions:recapitulatif" convention_uuid=convention.uuid %}' });
+                            });
+                        </script>
                     {% endif %}
-                    <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
-                        Revenir à l'étape précédente
-                    </a>
                 </div>
             </form>
         </div>
